--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
     <ul class="gallery"></ul>
 
     <script src="./js/gallery.js" defer></script>
+    <script src="
+https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
+"></script>
+    <link
+      href="
+https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
+"
+      rel="stylesheet"
+    />
   </body>
 </html>
